--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -97,6 +97,8 @@
     <nav class="navbar">
         <a href="{{ url_for('pages') }}" class="logo">Easy College</a>
         <div class="navbar-links">
+            <a href="https://mail.google.com/mail/u/0/?view=cm&to=campuslyapi@gmail.com&su=Contact%20from%20Easy%20College&body=Hello,%0D%0A%0D%0AI'm%20contacting%20you%20regarding%20Easy%20College.%0D%0A%0D%0ARegards,%0D%0A[Your%20Name]" target="_blank">Contact</a>
+            <a href="{{ url_for('about') }}">About</a>
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
     </nav>
